--- a/python/240803/02_selenium.ipynb
+++ b/python/240803/02_selenium.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1A9726BE736A3FDEB5C55A89C262C695', 'BCA655391BE59297B681D2F13EA65AAE']"
+       "['F5552391DBD6ABA214ACF20354173588', 'F1F7068B6F60304EA2454548693F7E77']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +335,282 @@
     "except Exception as e:\n",
     "    print(\"Error code:\", e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bs를 이용해서 html에서 img 태그 안에 src 속성을 모두 가지고 온다. \n",
+    "\n",
+    "# parsing \n",
+    "soup = bs(driver.page_source, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# div 태그 중 class가 product_item__MDtDF 인 태그를 모두 찾는다. \n",
+    "product_list = soup.find_all('div', attrs={\n",
+    "    'class' : 'product_item__MDtDF'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(product_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# product_list에서 첫번째 태그를 기준으로 테스트 \n",
+    "len(\n",
+    "    product_list[0].find_all('img')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# div중 class가 product_img_area__cUrko 인 태그를 선택 \n",
+    "img_tag = product_list[0].find('div', attrs={\n",
+    "    'class' : 'product_img_area__cUrko'\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<img alt=\"광동 비타500 비타오백 박스 비타민음료 비타음료 자양강장제 피로회복제 50병\" height=\"140\" src=\"https://shopping-phinf.pstatic.net/main_8578201/85782019184.jpg?type=f140\" width=\"140\"/>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_tag.find('img')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_url = img_tag.find('img')['src']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이미지를 pc에 저장하는 함수 생성 \n",
+    "def image_save(img_path, save_path, file_name):\n",
+    "    # file_name에 '/'는 제거\n",
+    "    file_name = file_name.replace('/', '')\n",
+    "    html_data = requests.get(img_path)\n",
+    "    imageFile = open(\n",
+    "        os.path.join(\n",
+    "            save_path, \n",
+    "            file_name\n",
+    "        ), \n",
+    "        'wb'\n",
+    "    )\n",
+    "    # 이미지의 데이터 크기를 지정\n",
+    "    chunk_size = 100000000\n",
+    "    for chunk in html_data.iter_content(chunk_size):\n",
+    "        imageFile.write(chunk)\n",
+    "        imageFile.close()\n",
+    "    print(f'{file_name} 파일 저장 완료')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test.png 파일 저장 완료\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_save(img_url, './img/', 'test.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# product_list를 기준으로 반복문을 실행하여 이미지를 저장 \n",
+    "for product in product_list:\n",
+    "    img_tag = product.find('div', attrs={\n",
+    "        'class' : 'product_img_area__cUrko'\n",
+    "    })\n",
+    "    img_url = img_tag.find('img')['src']\n",
+    "    file_name = img_tag.find('img')['alt'] + '.png'\n",
+    "    image_save(img_url, \"./img/\", file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 상품의 이름과 상품의 가격을 출력 \n",
+    "product_list2 = soup.find_all('div', attrs = {\n",
+    "    'class' : 'product_info_area__xxCTi'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = []\n",
+    "for product in product_list2:\n",
+    "    # 상품의 이름은 div 중 class가 product_title__Mmw2K에 존재\n",
+    "    item_name = product.find('div', attrs = {\n",
+    "                                 'class' : 'product_title__Mmw2K'\n",
+    "                             }).get_text()\n",
+    "    # 상품의 가격은 span 태그 중 class가 price인 태그의 문자 \n",
+    "    item_price = product.find('span', attrs = {\n",
+    "                                  'class' : 'price'\n",
+    "                              }).get_text()\n",
+    "    values.append(\n",
+    "        [item_name, item_price]\n",
+    "    ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['광동 비타500 비타오백 박스 비타민음료 비타음료 자양강장제 피로회복제 50병', '25,900원'],\n",
+       " ['비타500 100ml 30병 (4종 택1) + 비타500 제로 증정 (10병)', '16,900원'],\n",
+       " ['광동 비타500캔 스파클링 제로 피지라임 240ml 각6개씩 총24개 캔음료 비타민음료', '18,800원'],\n",
+       " ['광동제약 광동 비타500 100ml', '최저450원'],\n",
+       " ['[광동제약] 비타500 x 20병(1BOX) /선물용/선물용케이스/서비스', '11,100원'],\n",
+       " ['광동제약 광동 비타500 프레쉬 100ml', '최저2,000원'],\n",
+       " ['비타500 허니로열 곰돌이 푸 에디션 100ml', '최저14,890원'],\n",
+       " ['광동 비타500 프레시 fresh  100ml  100개', '46,530원'],\n",
+       " ['광동제약 광동 비타500 칼슘 100ml', '최저530원'],\n",
+       " ['광동 비타500 선물세트 드링크 비타민음료 20병x3케이스 선물용케이스 안전박스포장', '37,400원'],\n",
+       " ['(정기 구독) 비타500 100ml 100병(50병+50병)', '48,300원'],\n",
+       " ['약국 광동 비타500 에이스 100ml 50병 마시는 비타민C음료 선물용 박스', '24,800원'],\n",
+       " ['상일 광동 비타500 제로 스파클링 250ml', '최저16,092원'],\n",
+       " ['광동제약 광동 비타500 로열폴리스 120ml', '최저580원'],\n",
+       " ['박카스F 비타500 오로나민c 미에로화이바 비타천 각 10병씩 50병 자양강장제 사무실드링크', '29,900원'],\n",
+       " ['대웅생명과학 비타500 치어팩 250ml', '최저1,000원'],\n",
+       " ['광동 비타500 제로 100ml (20개) 카리나 2차 포토카드1set 대량 구매', '16,770원'],\n",
+       " ['상일 광동 비타500 스파클링 제로 유자 250ml', '최저16,900원'],\n",
+       " ['광동 비타500 240ml x 30캔', '14,260원'],\n",
+       " ['(광동 직영) 비타500 제로 잔망루피 에디션 100ml 20입 세트 + 무드등1개', '16,900원'],\n",
+       " ['비타 500 치어팩 비타민 음료 250ml 30개 파우치 광동 드링크', '28,900원'],\n",
+       " ['광동 광동 비타500 치어팩 파우치형 250ML 30입', '25,720원'],\n",
+       " ['광동제약 광동 비타500 제로 100ml', '최저740원'],\n",
+       " ['광동 비타500 스파클링  250ml  24개', '17,990원'],\n",
+       " ['광동제약 비타500 A.C.E 100ml', '최저10,090원'],\n",
+       " ['광동 비타500 아연 180ml x 40병', '35,500원'],\n",
+       " ['비타500 박카스F 오로나민C 미에로화이바 타우린2000 각20병씩 총 100병', '59,900원'],\n",
+       " ['광동제약 광동 비타500 콜라겐 잔망루피 100ml', '최저12,000원'],\n",
+       " ['광동 비타 500 광도르방  100ml  50개', '29,700원'],\n",
+       " ['튤립인터내셔널 광동 비타500 제로 스파클링 150ml', '최저16,500원'],\n",
+       " ['광동제약 광동 비타500 240ml', '최저570원'],\n",
+       " ['자양강장제 피로회복음료 박카스F 비타500 오로나민씨 레모나c 고려은단 10병 각2병씩', '9,900원'],\n",
+       " ['(광동제약) 비타500 100ml x 50병', '27,500원'],\n",
+       " ['(광동 직영) 비타500 오리지날 30병 + 제로루피 20병', '27,500원'],\n",
+       " ['광동 비타 500 로열폴리스  120ml  50개', '63,070원'],\n",
+       " ['광동제약 비타500 180ml', '최저750원'],\n",
+       " ['광동제약 비타500 칼슘 180ml', '최저17,460원'],\n",
+       " ['광동 비타500F 240ml 30캔  30개', '16,560원'],\n",
+       " ['광동 비타500 로열폴리스 120ml x 50병', '35,800원'],\n",
+       " ['광동 비타500 프레시 fresh  100ml  50개', '16,000원']]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
