--- a/python/etc/04_회귀분석.ipynb
+++ b/python/etc/04_회귀분석.ipynb
@@ -352,7 +352,7 @@
    ],
    "source": [
     "print(\"학습데이터 price 의 평균 :\", y_train.mean())\n",
-    "print(\"평사데이터 price 의 평균 :\", y_test.mean())"
+    "print(\"평가데이터 price 의 평균 :\", y_test.mean())"
    ]
   },
   {
