--- a/python/etc/02_insta.ipynb
+++ b/python/etc/02_insta.ipynb
@@ -17,6 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- .env 파일 생성하기\n",
+    "    - id = '인스타그램아이디'\n",
+    "    - password = '인스타그램비밀번호'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +56,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "103\n"
+      "102\n"
      ]
     }
    ],
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,17 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ID': ['delln.gc'],\n",
-       " 'Commet': ['만화에서나 보던 포실포실 수프레를 이제 한국에서도 먹을 수 있다구?  #먹스타그램']}"
+       "{'ID': ['eat.__.rin', 'jin_realestate2024', 'eat.__.rin'],\n",
+       " 'Commet': ['비 오는 날 어묵이나 우동에 쏘주한잔 어때요 오 ~? 구로디지털단지역에 이렇게 맛있는 우동집에 소주까지 ? 구웃 ㅎ',\n",
+       "  '안녕하세요 신림동 진 공인중개사사무소입니다 맞팔해요 🙌',\n",
+       "  '#구로디지털단지역 #구디단 #구디맛집 #구디술집 #구디술집 #구디땡초우동 #땡초우동 #내근처맛집 #ㅈㅁㅌ #매운맛 #해장할때연인들이가고싶은곳 #맛있는우동 #구디우동 #구디밥집 #구디먹자골목 #구디깔깔거리']}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -231,19 +242,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>delln.gc</td>\n",
-       "      <td>만화에서나 보던 포실포실 수프레를 이제 한국에서도 먹을 수 있다구?  #먹스타그램</td>\n",
+       "      <td>eat.__.rin</td>\n",
+       "      <td>비 오는 날 어묵이나 우동에 쏘주한잔 어때요 오 ~? 구로디지털단지역에 이렇게 맛있...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>jin_realestate2024</td>\n",
+       "      <td>안녕하세요 신림동 진 공인중개사사무소입니다 맞팔해요 🙌</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eat.__.rin</td>\n",
+       "      <td>#구로디지털단지역 #구디단 #구디맛집 #구디술집 #구디술집 #구디땡초우동 #땡초우동...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         ID                                         Commet\n",
-       "0  delln.gc  만화에서나 보던 포실포실 수프레를 이제 한국에서도 먹을 수 있다구?  #먹스타그램"
+       "                   ID                                             Commet\n",
+       "0          eat.__.rin  비 오는 날 어묵이나 우동에 쏘주한잔 어때요 오 ~? 구로디지털단지역에 이렇게 맛있...\n",
+       "1  jin_realestate2024                     안녕하세요 신림동 진 공인중개사사무소입니다 맞팔해요 🙌\n",
+       "2          eat.__.rin  #구로디지털단지역 #구디단 #구디맛집 #구디술집 #구디술집 #구디땡초우동 #땡초우동..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
